fixed small issue of button outline when on mobile

--- a/Contacts/contacts.css
+++ b/Contacts/contacts.css
@@ -26,6 +26,10 @@ button {
   width: 40px;
 }
 
+button:focus {
+  outline: none;
+}
+
 ul {
   list-style: none;
   transform: translateX(-10%);
